--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3>5. 資料揭露對象及方式</h3>
             <p>基於保護使用者之個人資料及隱私權，除非經過您同意前或基於善意及應法律規定之要求外，本網站絕不將您的個人資料提供、出借或出售給資通行動外之任何第三者。</p>
             <h3>6. 資料儲存及保管</h3>
-            <p>6.1目前 gladtaxi將您的密碼加密過後才除存在資料庫內，另外帳號密碼透過Facebook與授權而登入，您可以隨時登入 gladtaxi 修改您所在 gladtaxi所輸入過的個人資料(如姓名、性別、電子信箱等…)。</p>
+            <p>6.1目前 gladtaxi有兩種方式來做登入，第一種使用帳號密碼登入，並且將您的密碼加密過後才會儲存在資料庫內，第二種透過Facebook與第三方授權而登入，您可以隨時登入 gladtaxi 修改您所在 gladtaxi所輸入過的個人資料(如姓名、性別、電子信箱等…)。</p>
             <p>6.2 關於您提供的個人資料，我們將就資訊系統及公司作業規則制定嚴格規範，任何人均須在我們明定的授權規範下才能處理及利用必要之資料。我們針對資料安全設備投注之保護措施如下：</p>
             <p>6.3 我們採用防火牆防止不法入侵來保障您的個人資料安全。並進行資料傳輸加密，避免您的個人資料遭到非法存取。</p>
             <h3>7. 客戶資料權利行使</h3>
