--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel=stylesheet type="text/css" href="main.css">
-    <title>Document</title>
+    <title>GLAD-Taxi private_strategy</title>
 </head>
 <body>
     <div class="header"><img class="logo" src="https://i.imgur.com/GI7bTwe.png" alt=""/></div>
