增加旅客契約

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header"><img class="logo" src="https://i.imgur.com/GI7bTwe.png" alt=""/></div>
     <div class="content">
         <div class="max_width">
-            <h1>隱私權策略</h1>
+            <h1>隱私權策略(旅客契約)</h1>
             <h3>1. 資料蒐集方式</h3>
             <p>當您使用我們的手機應用程式、網站及其他線上產品和服務 (以下稱「服務」)，以及透過您與我們的其他互動和通訊時，資通行動科技有限公司(以下簡稱資通行動) 收集有關您的資訊。</p>
             <h3>2. 資料蒐集種類</h3>
